--- a/.aliasrc
+++ b/.aliasrc
@@ -20,3 +20,21 @@ alias cdshiny='cd /c/github/mm-shiny'
 # Docker ###
 ########################
 alias dme="eval \$(docker-machine env)"
+alias dst="docker start "
+alias dssh="docker-machine ssh default "
+alias di="docker images"
+alias drm="docker rm"
+alias dnuke="docker ps -aq | xargs docker stop | xargs docker rm"
+alias db="docker build"
+alias dp="docker ps"
+alias dpa="docker ps -a"
+alias de="docker exec"
+
+
+
+#######################
+# web
+#######################
+alias wgit='open "https://github.com/MikeMorris89"'
+alias wlh='open "http://localhost:3838/"'
+alias waws='open "https://us-west-2.console.aws.amazon.com/ec2/v2/home?region=us-west-2"'
