--- a/.aliasrc
+++ b/.aliasrc
@@ -1,6 +1,20 @@
 #!/bin/bash
 
+#colors
+zshcolor1() {
+	wget https://raw.githubusercontent.com/babun/babun/master/babun-core/plugins/oh-my-zsh/src/babun.zsh-theme -O ~/.oh-my-zsh/themes/babun.zsh-theme
+ 
+	zsh
+}
+zshcolor2() {
+	wget https://raw.githubusercontent.com/babun/babun/master/babun-core/plugins/oh-my-zsh/src/babun.zsh-theme -O ~/.oh-my-zsh/themes/babun.zsh-theme
+ 
+       	sed -i 's/red/magenta/g' ~/.oh-my-zsh/themes/babun.zsh-theme 
+       	sed -i 's/green/cyan/g' ~/.oh-my-zsh/themes/babun.zsh-theme
+       	sed -i 's/blue/green/g' ~/.oh-my-zsh/themes/babun.zsh-theme
 
+	zsh
+}
 
 #git
 gall() {
