--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".vim/bundle/Vundle.vim"]
 	path = .vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "shinyproxy-template"]
+	path = shinyproxy-template
+	url = https://github.com/openanalytics/shinyproxy-template.git
