--- a/shinyproxy-local/application.yml
+++ b/shinyproxy-local/application.yml
@@ -1,13 +1,13 @@
 hiny:
   proxy:
     title: Open Analytics Shiny Proxy
-    logo-url: http://www.openanalytics.eu/sites/www.openanalytics.eu/themes/oa/logo.png
+    logo-url: https://goo.gl/photos/d4jHJVwsU6fPn4cMA
     landing-page: /
     heartbeat-rate: 10000
     heartbeat-timeout: 60000
     port: 8080
-    authentication: ldap
-    admin-groups: scientists
+    authentication: none
+    admin-groups: admins
     # Simple auth configuration
     users:
     - name: jack
@@ -36,12 +36,19 @@ hiny:
     description: Application which demonstrates the basics of a Shiny app
     docker-cmd: ["R", "-e shinyproxy::run_01_hello()"]
     docker-image: openanalytics/shinyproxy-demo
-    groups: scientists, mathematicians
+    groups: users, admins
   - name: 06_tabsets
+    display-name: Tab Application 
+    description: Application which demonstrates the basics of a Shiny app
     docker-cmd: ["R", "-e shinyproxy::run_06_tabsets()"]
     docker-image: openanalytics/shinyproxy-demo
-    groups: scientists
-
+    groups: users, admins
+  - name: make_your_own 
+    display-name: Make your own dash
+    description: Application which dynamic creates dashboards on the fly
+    docker-cmd: ["R", "deployShinyBuilder(dir = '/srv/shiny-server/ShinyBuilder')"]
+    docker-image: mikemorris89/sbdr
+    groups: users, admins
 logging:
   file:
     shinyproxy.log
