--- a/shinyproxy-local/application.yml
+++ b/shinyproxy-local/application.yml
@@ -1,7 +1,9 @@
 hiny:
   proxy:
-    title: Open Analytics Shiny Proxy
-    logo-url: https://goo.gl/photos/d4jHJVwsU6fPn4cMA
+    #title: Cloud Morris - Data Visualization using Shiny and AWS
+    title: tst
+    logo-url: http://www.openanalytics.eu/sites/www.openanalytics.eu/themes/oa/logo.png
+    #logo-url: https://goo.gl/photos/d4jHJVwsU6fPn4cMA
     landing-page: /
     heartbeat-rate: 10000
     heartbeat-timeout: 60000
@@ -9,22 +11,22 @@ hiny:
     authentication: none
     admin-groups: admins
     # Simple auth configuration
-    users:
-    - name: jack
-      password: password
-      groups: scientists
-    - name: jeff
-      password: password
-      groups: mathematicians
-    # LDAP configuration
-    ldap:
-      url: ldap://ldap.forumsys.com:389/dc=example,dc=com
-      user-dn-pattern: uid={0}
-      group-search-base:
-      group-search-filter: (uniqueMember={0})
-      manager-dn: cn=read-only-admin,dc=example,dc=com
-      manager-password: password
-    # Docker configuration
+    #    users:
+    #    - name: jack
+    #      password: password
+    #      groups: scientists
+    #    - name: jeff
+    #      password: password
+    #      groups: mathematicians
+    #    # LDAP configuration
+    #    ldap:
+    #      url: ldap://ldap.forumsys.com:389/dc=example,dc=com
+    #      user-dn-pattern: uid={0}
+    #      group-search-base:
+    #      group-search-filter: (uniqueMember={0})
+    #      manager-dn: cn=read-only-admin,dc=example,dc=com
+    #      manager-password: password
+    #    # Docker configuration
     docker:
       cert-path: /home/none
       url: http://localhost:2375
@@ -43,12 +45,12 @@ hiny:
     docker-cmd: ["R", "-e shinyproxy::run_06_tabsets()"]
     docker-image: openanalytics/shinyproxy-demo
     groups: users, admins
-  - name: make_your_own 
-    display-name: Make your own dash
-    description: Application which dynamic creates dashboards on the fly
-    docker-cmd: ["R", "deployShinyBuilder(dir = '/srv/shiny-server/ShinyBuilder')"]
-    docker-image: mikemorris89/sbdr
-    groups: users, admins
+    #  - name: make_your_own 
+    #    display-name: Make your own dash
+    #    description: Application which dynamic creates dashboards on the fly
+    #    docker-cmd: ["R", "deployShinyBuilder(dir = '/srv/shiny-server/ShinyBuilder')"]
+    #    docker-image: mikemorris89/sbdr
+    #    groups: users, admins
 logging:
   file:
     shinyproxy.log
