--- a/.gitmodules
+++ b/.gitmodules
@@ -9,10 +9,11 @@
 	url = https://github.com/robbyrussell/oh-my-zsh.git
 	ignore = dirty
 	ignore = untracked
-
-[submodule ".vim/bundle/Vundle.vim"]
-	path = .vim/bundle/Vundle.vim
-	url = https://github.com/VundleVim/Vundle.vim.git
 [submodule "shinyproxy-template"]
 	path = shinyproxy-template
 	url = https://github.com/openanalytics/shinyproxy-template.git
+[submodule ".vim/bundle/Dockerfile.vim"]
+	path = ~/.vim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim.git 
+
+
