working shiny proxy and builder

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	url = https://github.com/VundleVim/Vundle.vim.git 
 
 
+[submodule "shinyproxy-mm"]
+	path = shinyproxy-mm
+	url = https://github.com/MikeMorris89/shinyproxy-mm
