mod installs and rc

--- a/.aliasrc
+++ b/.aliasrc
@@ -1,5 +1,8 @@
 #!/bin/bash
 
+# cmd
+alias cmd="bash"
+
 #colors
 zshcolor1() {
 	wget https://raw.githubusercontent.com/babun/babun/master/babun-core/plugins/oh-my-zsh/src/babun.zsh-theme -O $HOME/.oh-my-zsh/themes/babun.zsh-theme
