--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,90 @@ shiny/lc/data/loan.csv
 /.vim/bundle/Vundle.vim/
 /Anaconda3-4.0.0-Linux-x86_64.sh
 /.fltk/fltk.org/fltk.prefs
+
+.DataGrip2017.1/
+.PyCharmCE2016.3/
+.Xauthority-c
+.Xauthority-l
+.Xmodmap
+.astropy/
+.atom/
+.dbeaver-drivers/
+.eclipse/
+.gem/
+.gimp-2.8/
+.linuxbrew/
+.muttrc
+.offlineimap.py
+.offlineimap.pyc
+.offlineimap/
+.offlineimaprc
+.p2/
+.qt/
+.sup/
+.swt/
+.thumbnails/
+.tooling/
+DataGrip-2017.1/
+Desktop/
+Mail/
+Pictures/
+PycharmProjects/
+apache/
+bootflat-admin/
+#	bootstrap-cv/
+clamscan-root.txt
+collaboration/
+data-science-ipython-notebooks/
+docker-automated-builds/CentOS-Dockerfiles/
+eclipse/
+getpws
+github/
+history20170304.txt
+jetbrains-toolbox-1.1.2143/
+jupyter/
+node_modules/
+projects.chrislkeller.com/
+pycharm-community-2016.3.2/
+#	python/
+sent
+shinyproxy-explore/
+store/
+stores/
+#	utf7.py
+#	utf7.pyc
+workspace/
+xmodmap_original
+/install/epel-release-latest-7.noarch.rpm
+/utf7.py
+/utf7.pyc
+
+\.dbus/
+
+\.gitkraken/
+
+\.macromedia/
+
+\.pact/
+
+cmd/database/
+
+\.directory
+
+\.dmrc
+
+\.gtkrc-2\.0
+
+\.xsession-errors
+
+\.xsession-errors\.old
+
+examples\.desktop
+
+keymaptable
+
+bootstrap-cv/
+
+\.gconf/apps/guake/
+
+\.gconf/apps/%gconf\.xml
